fix: change routes order for favorites and update swagger documentation
