# src/routes/recipesRoutes.js
@@ -37,13 +37,6 @@ const router = Router();
 // -------------------------------------------------------------------------------------------
 router.get('/recipes', celebrate(getRecipesSchema), getAllRecipes);
 
-// ===========================================================================================
-// GET /recipes/:recipeId - отримання детальної інформації про рецепт за його id
-// Публічний маршрут
-// -------------------------------------------------------------------------------------------
-router.get('/recipes/:recipeId', getRecipeById);
-
-// ===========================================================================================
 // POST /recipes/favorites/:recipeId
 // Додавання рецепту до списку улюблених
 // Приватний маршрут
@@ -74,6 +67,14 @@ router.post(
 // Приватний маршрут
 // -------------------------------------------------------------------------------------------
 router.get('/recipes/favorites', authenticate, getFavoriteRecipes);
+// ===========================================================================================
+
+// ===========================================================================================
+// GET /recipes/:recipeId - отримання детальної інформації про рецепт за його id
+// Публічний маршрут
+// -------------------------------------------------------------------------------------------
+router.get('/recipes/:recipeId', getRecipeById);
+
 // ===========================================================================================
 
 // Експорт роутера
